# ginkgo-sense

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  deploy.yml
configs/: resnet50.yaml  train.yaml
data/: README.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TRAINING.md
model/: __init__.py  arch.py  benchmark.py  classifier.py  detector.py  evaluator.py  export.py  train.py
scripts/: benchmark.py  evaluate.py  export_model.py  gradcam_demo.py  prepare_data.py
templates/: index.html
tests/: conftest.py  test_api.py  test_classifier.py
utils/: __init__.py  augment.py  data_loader.py  gradcam.py  image_process.py  logger.py  metrics.py  visualization.py
